# my-website

./: .bash_history  .gitconfig  .gitignore  .kshrc  .nix-profile  .psql_history  .python_history  .replit  Caddyfile  LICENSE  README.md  global_utils.py  pyproject.toml  requirements.txt
.config/caddy/: autosave.json
.config/pulse/: cookie
.config/systemd/user/: caddy.service  resource_monitor.service  url_shortener.service
.github/workflows/: codeql.yml  pylint.yml  ssh.yml
.links2/: bookmarks.html
.local/share/caddy/: instance.uuid  last_clean.json
.nix-defexpr/: channels
main/: index.html  robots.txt
nest-management-bot/: DOCS.md  SETUP.md  client.py  database.py  main.py  management-websocket.py  server.py  server_utils.py  utils.py
nest-management-bot/listeners/: __init__.py
nest-management-bot/modals/: global_usage.py  process.py  processes_list.py
nest-management-bot/views/: home.py
qr_code/: index.html
qr_code/assets/: generation.js  hack_club_theme.css  style.css
resource_monitor/: README.md  monitor.py
resource_monitor/site_files/: monitor.js
resource_monitor/static/: chart.json  humanize.js  monitor.css  monitor.js
resource_monitor/template/: monitor.html  monitor.js
shortener/: README.md  database.py  main.py  test_api.http  test_shortened_url.http  url_shortener_figma.fig  utils.py
shortener/static/: analytics.css  clipboardScript.js  fonts.css  formHandler.js  index.css
shortener/template/: analytics.html  index.html  layout.html  url_created.html
url_shortener/: index.html
(+3 files in other folders)
